Добавил вызов stat.js

--- a/index.html
+++ b/index.html
@@ -181,29 +181,30 @@
   </div>
 </template>
 <script type="text/javascript">
-  //Объявите переменную fireballSize, которая будет управлять размером фаербола в пикселях.
+  //Управляет размером фаербола в пикселях.
   var fireballSize = 22;
-  //Объявите переменную getFireballSpeed, которая будет управлять скоростью фаербола в зависимости от направления ветра в игре.
+  //Управляет скоростью фаербола в зависимости от направления ветра в игре.
   var getFireballSpeed = function (left) {
     return left ? 5 : 2;
   };
-  //Установите скорость мага wizardSpeed равной 3.
+  //Скорость мага.
   var wizardSpeed = 3;
-  //Установите ширину мага wizardWidth равной 70.
+  //Ширина мага.
   var wizardWidth = 70;
-  //Задайте переменной getWizardHeight функцию, которая возвращает пропорциональную высоту мага, то есть высота мага — это пропорция 1.337 * ширина мага.
+  //Пропорциональная высота мага.
   var getWizardHeight = function () {
     return 1.337 * wizardWidth;
   };
-  //Определите функцию getWizardX c одним параметром — width. Игра будет вызывать вашу функцию и передавать в неё этот параметр (который обозначает ширину игровой области).
+  //Положение мага по горизонтали.
   var getWizardX = function (width) {
     return width / 2 - wizardWidth / 2;
   };
-  //Определите функцию getWizardY c одним параметром — height. Игра будет вызывать вашу функцию и передавать в неё этот параметр (который обозначает высоту игровой области).
+  //Положение мага по вертикали.
   var getWizardY = function (height) {
     return 1/3 * height;
   };
 </script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
