Добавил класс для input name="coat-color", исправил отправление неактуального цвета плаща

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </g>
           </svg>
         </div>
-        <input type="hidden" name="coat-color" value="rgb(101, 137, 164)">
+        <input class="wizard-coat-input" type="hidden" name="coat-color" value="rgb(101, 137, 164)">
         <input class="wizard-eyes-input" type="hidden" name="eyes-color" value="black">
       </div>
 
