--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
     return 1/3 * height;
   };
 </script>
+<script src="js/util.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 <script src="js/setup.js"></script>
